--- a/projeto-redesnaoseioque/index.html
+++ b/projeto-redesnaoseioque/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/style.css">
     <title>projeto de redes sociais</title>
 </head>
 <body>
-    <h1></h1>
+    <main>
+        <section id="telefone">
+            <iframe src="imagens/tela-home.jpg" name="tela" id="tela" frameborder="0" ></iframe>
+        </section>
+        <section id="redes sociais">
+
+        </section>
+    </main>
 </body>
 </html>
