--- a/projeto-redesnaoseioque/index.html
+++ b/projeto-redesnaoseioque/index.html
@@ -12,8 +12,13 @@
         <section id="telefone">
             <iframe src="imagens/tela-home.jpg" name="tela" id="tela" frameborder="0" ></iframe>
         </section>
-        <section id="redes sociais">
-
+        <section id="redes-sociais">
+                <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a>
+                <a href="../youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="youtube"></a>
+                <a href="../GITHUB.HTML" target="tela"><img src="imagens/logo-github.jpg" alt="github"></a>
+                <a href="../instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="instagram"></a>
+                <a href="../twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="twitter"></a>
+                <a href="../facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="facebook"></a>
         </section>
     </main>
 </body>
