--- a/twitter.html
+++ b/twitter.html
@@ -4,6 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+    * {
+        margin: 0px;
+        padding: 0px;
+        font-family: Arial, Helvetica, sans-serif
+      }
+      img {
+          width: 100vw;
+      }
+      ::-webkit-scrollbar {
+          width: 0px;
+          height: 0px;
+      }
+      a {
+          background-color: rgb(75, 0, 0);
+          color: white;
+          display: block;
+          padding: 20px;
+          text-align: center;
+          font-weight: bolder;
+          text-decoration: none;
+      }
+      a:hover {
+          background-color: red;
+      }
+      </style>
 </head>
 <body>
     <img src="projeto-redesnaoseioque/imagens/tela-twitter.jpg" alt="twitter">
